# CaixaEnginyersRoutes

./: Dades_Municipis.csv  aStar.py  classe.py  cp_conv.py  elements.py  input.tsv  loader.py  pyproject.toml  save_edges.py  vertexs.txt
Lot2/: TwoBlockFour.txt  TwoBlockOne.txt  TwoBlockThree.txt  TwoBlockTwo.txt
Lot4/: 4Block1.txt  4Block4.txt
Lot5/: 5Block1.txt  5Block2.txt  FiveBlockFour.txt  FiveBlockThree.txt
