[tool.poetry]
name = "caixaenginyersroutes"
version = "0.1.0"
description = ""
authors = ["Arnaldopower <116560232+Arnaldopower@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
